--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="FACEBOOK_APP_ID">366678503975157</string>
     <string name="ACCOUNT_KIT_CLIENT_TOKEN">3ffe9921ac4f447f2edcfe359e193e35</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
